--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,40 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+# Compiled object files
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
+# Compiled binary files
 *.exe
 *.out
 *.app
+
+# Libraries
+*.lib
+*.a
+*.so
+*.dll
+*.dylib
+
+# Debug and build directories
+/build/
+/debug/
+/dist/
+
+# Temporary files
+*.tmp
+*.log
+*.swp
+*.swo
+*.bak
+
+# IDE-specific files
+.vscode/
+.idea/
+*.code-workspace
+
+# System-specific files
+.DS_Store
+Thumbs.db
+*.ini
+
+# Git-specific
+*.orig
